# Distributed-Quantum-Computing

./: .gitignore  .gitmodules  README.md
QuEST/: .nfs0000000000b2259e00000032  .nfs0000000000b2271200000009  CMakeLists.txt  TengsNote.txt  checkmpi.sh  dopython.py  gompi.sh  host_file  mpi_qubits.sh  newmpi.sh  pySummarize.py  run_cmake.sh  save_excutable  save_newmpi.sh  single.sh  test.sh  totest.sh  tryit.c  var_qubits.sh
QuEST/CTools/: newMemorymeasure.c
QuEST/examples/: a.out  test.c  tutorial_example.c
QuEST/mpiRun/: mpi.sh  var_gates.sh  var_qubits.sh  var_slot1_and_slot2.sh  var_threads.sh
QuEST/old/: gompi_varThreads.sh
QuEST/results/: .nfs0000000000ce22380000009d  result_nqubits_28_slot1_1_slot2_1_cdepth_0_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_10_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_11_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_12_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_13_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_14_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_15_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_16_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_17_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_18_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_19_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_1_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_20_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_21_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_22_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_23_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_24_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_25_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_26_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_27_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_2_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_3_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_4_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_5_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_6_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_7_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_8_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_9_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_0_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_10_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_11_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_12_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_13_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_14_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_15_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_16_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_17_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_18_nrepetition_1  result_nqubits_29_slot1_1_slot2_1_cdepth_19_nrepetition_1  (+79 more)
QuEST/results_nonadaptive/: result_nqubits_28_slot1_1_slot2_1_cdepth_0_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_10_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_11_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_12_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_13_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_14_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_15_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_16_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_17_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_18_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_19_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_1_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_20_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_21_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_22_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_23_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_24_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_25_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_26_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_27_nrepetition_1  result_nqubits_28_slot1_1_slot2_1_cdepth_2_nrepetition_1  (+97 more)
QuEST/saved_dot_git/: config  index  (+1 more)
(+609 files in other folders)
